--- a/Web/assets/css/style.css
+++ b/Web/assets/css/style.css
@@ -83,3 +83,10 @@ a:hover {
   width: 150px;
   margin-bottom: 20px;
 }
+
+.logo-top-right {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 80px;
+}
